# noted

./: Cargo.toml
src/: main.rs  syntax_highlighting.rs
src/app/: mod.rs  noted.rs
