[package]
name = "noted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15.0"
enum-map = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
unicode_names2 = { version = "0.4.0", default-features = false }


[features]
persistence = ["serde"]